[project]
name = "chasecentercalendar"
version = "1.0.0"
dependencies = [
    # Core packages
    "python-dotenv==1.1.1",                       # Read environment variables from .env
    "Flask==3.1.2",                               # Web microframework
    "gunicorn==23.0.0",                           # WSGI server
    "syspath==3.0.8",                             # Modify paths

    # Features
    "beautifulsoup4==4.13.4",                     # HTML Parser
    "flask-sitemap==0.4.0",                       # Web sitemaps
    "icalendar==6.1.3",                           # iCal generator
    "python-dateutil==2.9.0.post0",               # Datetime manipulation
    "python-slugify==8.0.4",                      # Generate string slugs

    # Monitoring/tracking/logging
    "blinker==1.9.0",                             # Dependency of rollbar
    "rollbar==1.3.0",                             # rollbar.com error logging
    "setproctitle==1.3.7",                        # Allow gunicorn to set process title
    "varsnap==1.5.8",                             # Test discovery
]

[project.optional-dependencies]
test = [
    # Testing
    "coverage==7.10.7",                           # Test coverage
    "ruff==0.13.3",                               # Python linter

    # Types
    "mypy==1.18.2",                               # Type checking
    "types-beautifulsoup4==4.12.0.20250516",      # Type stubs for beautifulsoup4 package
    "types-python-dateutil==2.9.0.20241206",      # Type stubs for dateutil package
    "types-python-slugify==8.0.2.20240310",       # Type stubs for python-slugify package
    "types-requests==2.32.0.20250328",            # Type stubs for requests package
]

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
lint.select = ["E", "F", "W", "A", "B", "COM", "N", "PLC", "PLE", "PLW"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]

[tool.setuptools]
py-modules = []
